fixed navbar alignment

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -18,7 +18,6 @@
 
 .item:nth-child(2) {
   flex: 3;
-  justify-content: center;
 }
 
 .item:last-child {
@@ -59,6 +58,7 @@
 .listItem {
   margin: 20px;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .cart {
